Revert "TP #40964: Update GetConfig DTOs and use the USPS webclient to populate account info"
This reverts commit 2495bdd74ce1a6505372a886510c18ac4a5eb627.

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1565,6 +1565,7 @@
     <Compile Include="Warehouse\Orders\DTO\WarehouseOrderNote.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseUploadOrderResponse.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseUploadOrderResponses.cs" />
+    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\CarrierConfigurationPayload.cs" />
     <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\CarrierConfiguration.cs" />
     <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\UspsAccountConfiguration.cs" />
     <Compile Include="Warehouse\Configuration\HubConfigurationImporter.cs" />
