--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1214,6 +1214,7 @@
     <Compile Include="Products\Import\IImportProductsResult.cs" />
     <Compile Include="Products\ProductSelectionChangedEventArgs.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\BaseCarrierSetup.cs" />
+    <Compile Include="Shipping\Carriers\CarrierSetup\EndiciaCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\FedExCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\HubCarrierConfigurator.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\ICarrierSetup.cs" />
