--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1560,6 +1560,7 @@
     <Compile Include="Warehouse\Configuration\DTO\HubConfiguration.cs" />
     <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\EndiciaAccountConfiguration.cs" />
     <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\FedExAccountConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\OnTracAccountConfiguration.cs" />
     <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\UpsAccountConfiguration.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseGetOrdersResponse.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseImportDetails.cs" />
