--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1220,6 +1220,7 @@
     <Compile Include="Shipping\Carriers\CarrierSetup\HubCarrierConfigurator.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\ICarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\IHubCarrierConfigurator.cs" />
+    <Compile Include="Shipping\Carriers\CarrierSetup\OnTracCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\UpsCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\UspsCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\Asendia\IAsendiaManifestCreator.cs" />
