Add unit tests for DHL

--- a/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
+++ b/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Carriers\BestRate\BestRateShipmentAdapterTest.cs" />
     <Compile Include="Carriers\BestRate\BestRateShipmentPreProcessorTest.cs" />
     <Compile Include="Carriers\BestRate\BestRateShippingProfileApplicationStrategyTest.cs" />
+    <Compile Include="Carriers\CarrierSetup\DhlCarrierSetupTest.cs" />
     <Compile Include="Carriers\CarrierSetup\EndiciaCarrierSetupTest.cs" />
     <Compile Include="Carriers\CarrierSetup\FedExCarrierSetupTest.cs" />
     <Compile Include="Carriers\CarrierSetup\OnTracCarrierSetupTest.cs" />
