--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1217,6 +1217,7 @@
     <Compile Include="Shipping\Carriers\CarrierSetup\BaseCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\DhlCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\EndiciaCarrierSetup.cs" />
+    <Compile Include="Shipping\Carriers\CarrierSetup\Express1EndiciaCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\Express1USPSCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\FedExCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\CarrierSetup\HubCarrierConfigurator.cs" />
