Add remaining normal flow pages and use our BlueSteel style

--- a/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
+++ b/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ShipWorks.UI\ShipWorks.UI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Views\SystemCheck.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
