--- a/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
+++ b/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="License.rtf" />
+    <None Remove="Resources\loading_spinner.png" />
     <None Remove="Styles\BlueSteel\Roboto-Regular.ttf" />
     <None Remove="Styles\BlueSteel\RobotoFontLicense.txt" />
   </ItemGroup>
@@ -24,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\loading_spinner.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Styles\BlueSteel\Roboto-Regular.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
