WORKS-5: Got Jenkins building the new installer

--- a/Code/ShipWorks.Tests.Integration.Shared/ShipWorks.Tests.Integration.Shared.csproj
+++ b/Code/ShipWorks.Tests.Integration.Shared/ShipWorks.Tests.Integration.Shared.csproj
@@ -29,6 +29,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>..\..\Build\Interapptive.Strict.ruleset</CodeAnalysisRuleSet>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
