WORKS-5: Added web client environment so that we can reference prod, local, or other.

--- a/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
+++ b/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Artifacts\**" />
+    <EmbeddedResource Remove="Artifacts\**" />
+    <None Remove="Artifacts\**" />
+    <Page Remove="Artifacts\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="License.rtf" />
     <None Remove="Resources\loading_spinner.png" />
     <None Remove="Styles\BlueSteel\Roboto-Regular.ttf" />
