WORKS-157: Add button to home tab to launch quick start dialog

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -11374,6 +11374,7 @@
     <Content Include="Resources\view_linked_infinity.png" />
     <None Include="Resources\view_next.png" />
     <EmbeddedResource Include="Shipping\Carriers\UPS\OneBalance\DiviceIdentification.html" />
+    <Content Include="Resources\window_gear.png" />
     <Content Include="Stores\Platforms\Magento\Modules\MagentoOne\MagentoConnectExtension\app\code\community\Interapptive\ShipWorks\etc\adminhtml.xml" />
     <Content Include="Stores\Platforms\Magento\Modules\MagentoOne\MagentoConnectExtension\app\code\community\Interapptive\ShipWorks\etc\api.xml" />
     <Content Include="Stores\Platforms\Magento\Modules\MagentoOne\MagentoConnectExtension\app\code\community\Interapptive\ShipWorks\etc\config.xml" />
