--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -11373,8 +11373,7 @@
     <Content Include="Resources\view_linked_arrow.png" />
     <Content Include="Resources\view_linked_infinity.png" />
     <None Include="Resources\view_next.png" />
-    <EmbeddedResource Include="Shipping\Carriers\UPS\OneBalance\DiviceIdentification.html" />
-    <Content Include="Resources\window_gear.png" />
+    <EmbeddedResource Include="Shipping\Carriers\UPS\OneBalance\DiviceIdentification.html" />    
     <Content Include="Stores\Platforms\Magento\Modules\MagentoOne\MagentoConnectExtension\app\code\community\Interapptive\ShipWorks\etc\adminhtml.xml" />
     <Content Include="Stores\Platforms\Magento\Modules\MagentoOne\MagentoConnectExtension\app\code\community\Interapptive\ShipWorks\etc\api.xml" />
     <Content Include="Stores\Platforms\Magento\Modules\MagentoOne\MagentoConnectExtension\app\code\community\Interapptive\ShipWorks\etc\config.xml" />
@@ -11451,6 +11450,7 @@
     <None Include="Resources\window_open.png" />
     <None Include="Resources\window_refresh.png" />
     <None Include="Resources\window_save.png" />
+    <None Include="Resources\window_gear.png" />
     <EmbeddedResource Include="Templates\Management\Skeletons\labelXml.xsl" />
     <EmbeddedResource Include="Templates\Management\Skeletons\labelHtml.xsl" />
     <EmbeddedResource Include="Templates\Management\Skeletons\labelText.xsl" />
