--- a/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
+++ b/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
@@ -10,8 +10,16 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Properties\interapptive_public.snk</AssemblyOriginatorKeyFile>
     <DelaySign>true</DelaySign>
+    <SnExe>C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.6 Tools\sn.exe</SnExe>
+    <SignToolExe>C:\Program Files (x86)\Windows Kits\10\bin\x64\signtool.exe</SignToolExe>
+    <SignCommand>"$(SignToolExe)" sign /v /sm /n Interapptive /d "ShipWorks" /du "http://www.shipworks.com" /t "http://timestamp.globalsign.com/scripts/timstamp.dll"</SignCommand>
   </PropertyGroup>
 
+  <Target Name="SignInstaller" Condition=" $(ReleaseType) != 'None' ">
+    <Message Text="Signing installers: @(Installers->'%(Filename)', ', ')" />
+    <Exec Command='$(SignCommand) "%$(TargetDir)$(TargetFileName)"' />
+  </Target>
+  
   <ItemGroup>
     <Compile Remove="Artifacts\**" />
     <EmbeddedResource Remove="Artifacts\**" />
