--- a/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
+++ b/Code/ShipWorks.Installer/ShipWorks.Installer.csproj
@@ -17,7 +17,7 @@
 
   <Target Name="SignInstaller" Condition=" $(ReleaseType) != 'None' ">
     <Message Text="Signing installers: @(Installers->'%(Filename)', ', ')" />
-    <Exec Command='$(SignCommand) "%$(TargetDir)ShipWorks.Installer.exe"' />
+    <Exec Command='$(SignCommand) "%\jenkins-builds\SOI_spike-extract-ookii-dailogs\Artifacts\Installer\ShipWorks.Installer.exe"' />
   </Target>
   
   <ItemGroup>
