--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1214,18 +1214,18 @@
     <Compile Include="Products\Import\FailedProductImportException.cs" />
     <Compile Include="Products\Import\IImportProductsResult.cs" />
     <Compile Include="Products\ProductSelectionChangedEventArgs.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\BaseCarrierSetup.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\DhlCarrierSetup.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\EndiciaCarrierSetup.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\Express1EndiciaCarrierSetup.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\Express1USPSCarrierSetup.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\FedExCarrierSetup.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\HubCarrierConfigurator.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\ICarrierSetup.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\IHubCarrierConfigurator.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\OnTracCarrierSetup.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\UpsCarrierSetup.cs" />
-    <Compile Include="Shipping\Carriers\CarrierSetup\UspsCarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\BaseCarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\DhlCarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\EndiciaCarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\Express1EndiciaCarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\Express1USPSCarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\FedExCarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\HubCarrierConfigurator.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\ICarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\IHubCarrierConfigurator.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\OnTracCarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\UpsCarrierSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\UspsCarrierSetup.cs" />
     <Compile Include="Shipping\Carriers\Asendia\IAsendiaManifestCreator.cs" />
     <Compile Include="Shipping\Carriers\BestRate\BestRateExcludedAccountRepository.cs" />
     <Compile Include="Shipping\Carriers\BestRate\IBestRateExcludedAccountRepository.cs" />
@@ -1562,12 +1562,20 @@
     <Compile Include="UI\WPF\WPFInterop.cs" />
     <Compile Include="Warehouse\Configuration\DTO\ConfigurationAddress.cs" />
     <Compile Include="Warehouse\Configuration\DTO\HubConfiguration.cs" />
-    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\DhlAccountConfiguration.cs" />
-    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\EndiciaAccountConfiguration.cs" />
-    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\Express1AccountConfiguration.cs" />
-    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\FedExAccountConfiguration.cs" />
-    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\OnTracAccountConfiguration.cs" />
-    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\UpsAccountConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\DTO\DhlAccountConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\DTO\EndiciaAccountConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\DTO\Express1AccountConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\DTO\FedExAccountConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\DTO\OnTracAccountConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\DTO\UpsAccountConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\HubConfigurator.cs" />
+    <Compile Include="Warehouse\Configuration\IHubConfigurator.cs" />
+    <Compile Include="Warehouse\Configuration\Stores\DTO\GenericModuleConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Stores\DTO\StoreConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Stores\GenericModuleSetup.cs" />
+    <Compile Include="Warehouse\Configuration\Stores\HubStoreConfigurator.cs" />
+    <Compile Include="Warehouse\Configuration\Stores\IHubStoreConfigurator.cs" />
+    <Compile Include="Warehouse\Configuration\Stores\IStoreSetup.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseGetOrdersResponse.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseImportDetails.cs" />
     <Compile Include="Users\IUserManager.cs" />
@@ -1580,8 +1588,8 @@
     <Compile Include="Warehouse\Orders\DTO\WarehouseOrderNote.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseUploadOrderResponse.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseUploadOrderResponses.cs" />
-    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\CarrierConfiguration.cs" />
-    <Compile Include="Warehouse\Configuration\DTO\ShippingSettings\UspsAccountConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\DTO\CarrierConfiguration.cs" />
+    <Compile Include="Warehouse\Configuration\Carriers\DTO\UspsAccountConfiguration.cs" />
     <Compile Include="Warehouse\Configuration\HubConfigurationImporter.cs" />
     <Compile Include="Warehouse\Configuration\HubConfigurationWebClient.cs" />
     <Compile Include="Warehouse\Configuration\IHubConfigurationWebClient.cs" />
