--- a/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
+++ b/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
@@ -660,6 +660,7 @@
     <Compile Include="Users\Security\ArchiveSecurityContextTest.cs" />
     <Compile Include="Users\Security\SecurityContextFactoryTest.cs" />
     <Compile Include="Users\UserServiceTest.cs" />
+    <Compile Include="Warehouse\Configuration\HubStoreSynchronizerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Core\Certificates\cert_key_pem.txt" />
