--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1562,6 +1562,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="UI\WPF\WPFInterop.cs" />
+    <Compile Include="Warehouse\Configuration\Customer\HubCustomerConfigurator.cs" />
     <Compile Include="Warehouse\Configuration\Customer\IHubCustomerConfigurator.cs" />
     <Compile Include="Warehouse\Configuration\DTO\ConfigurationAddress.cs" />
     <Compile Include="Warehouse\Configuration\DTO\HubConfiguration.cs" />
