--- a/Code/ShipWorks.Res/ShipWorks.Res.csproj
+++ b/Code/ShipWorks.Res/ShipWorks.Res.csproj
@@ -590,6 +590,7 @@
     <EmbeddedResource Include="Data\Administration\Scripts\Update\8.3\8.3.0.0.sql" />
     <EmbeddedResource Include="Data\Administration\Scripts\Update\8.3\8.3.1.0.sql" />
     <EmbeddedResource Include="Data\Administration\Scripts\Update\8.3\8.3.2.0.sql" />
+    <EmbeddedResource Include="Data\Administration\Scripts\Update\8.4\8.4.0.0.sql" />
     <Content Include="Templates\Distribution\Source\Emails\Shipment Notification\settings.xml" />
     <Content Include="Templates\Distribution\Source\Emails\Shipment Notification\template.xsl" />
     <Content Include="Templates\Distribution\Source\Invoices\Blue\invoiceHeaderBlue.jpg" />
